--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
 
   "scripts": {
-    "start": "node start.js",
+    "start": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
@@ -18,7 +18,6 @@
     "lint": "npm run lint:frontend && npm run lint:backend",
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd backend && npm run lint",
-    "test-build": "node test-build.js",
     "docker:build": "docker-compose -f docker-compose.prod.yml build",
     "docker:up": "docker-compose -f docker-compose.prod.yml up -d",
     "docker:down": "docker-compose -f docker-compose.prod.yml down",
